// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders disabled Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
    style="--fui-slider-rail-direction: 90deg; --fui-slider-thumb-position: 50%; --fui-slider-rail-offset: 0%; --fui-slider-rail-progress: 50%;"
  >
    <input
      class=""
      disabled=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders horizontal Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
    style="--fui-slider-rail-direction: 90deg; --fui-slider-thumb-position: 50%; --fui-slider-rail-offset: 0%; --fui-slider-rail-progress: 50%;"
  >
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders horizontal origin Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
    style="--fui-slider-rail-direction: 90deg; --fui-slider-thumb-position: 50%; --fui-slider-rail-offset: 20%; --fui-slider-rail-progress: 30%;"
  >
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders inline Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
    style="--fui-slider-rail-direction: 90deg; --fui-slider-thumb-position: 50%; --fui-slider-rail-offset: 0%; --fui-slider-rail-progress: 50%;"
  >
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
    style="--fui-slider-rail-direction: 0deg; --fui-slider-thumb-position: 50%; --fui-slider-rail-offset: 0%; --fui-slider-rail-progress: 50%;"
  >
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      orient="vertical"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;

exports[`Slider renders vertical origin Slider correctly 1`] = `
<div>
  <div
    class="fui-Slider"
    style="--fui-slider-rail-direction: 0deg; --fui-slider-thumb-position: 50%; --fui-slider-rail-offset: 20%; --fui-slider-rail-progress: 30%;"
  >
    <input
      class=""
      id="slider-1"
      max="10"
      min="0"
      orient="vertical"
      type="range"
      value="5"
    />
    <div
      class=""
    />
    <div
      class=""
    />
  </div>
</div>
`;
